force-app/main/default/objects/Order/fields/CvpErrorCode__c.field-meta.xml
<CustomField>
    <fullName>CvpErrorCode__c</fullName>
    <description>Informazione relativa all&apos;esito CVP; RelatiRicevuta nella notify in caso di KO o di Saldo debito pagatore da SAP (ERRORCODE)</description>
    <label>Codice Errore CVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>