force-app/main/default/objects/Order/fields/CvpErrorSource__c.field-meta.xml
<CustomField>
    <fullName>CvpErrorSource__c</fullName>
    <description>Informazione relativa all&apos;esito CVP; RelatiRicevuta nella notify in caso di KO o di Saldo debito pagatore da SAP (ERRORSOURCE)</description>
    <label>Sorgente Errore CVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>