force-app/main/default/objects/Order/fields/CvpRiskRating__c.field-meta.xml
<CustomField>
    <fullName>CvpRiskRating__c</fullName>
    <description>Informazione relativa all&apos;esito CVP; RelatiRicevuta nella notify in caso di KO o di Saldo debito pagatore da SAP (RISKRATING)</description>
    <label>Risk Rating CVP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>