force-app/main/default/objects/Order/fields/DateComfortCall__c.field-meta.xml
<CustomField>
    <fullName>DateComfortCall__c</fullName>
    <description>Campo di tracciamento per identificare la data quando l’order e stato segnato per la comfort call</description>
    <label>Data comfort call</label>
    <type>Date</type>
</CustomField>