force-app/main/default/objects/Order/fields/DateSentToSII__c.field-meta.xml
<CustomField>
    <fullName>DateSentToSII__c</fullName>
    <label>Data Invio al SII</label>
    <type>Date</type>
</CustomField>