force-app/main/default/objects/Order/fields/Decision40Link__c.field-meta.xml
<CustomField>
    <fullName>Decision40Link__c</fullName>
    <label>Link Delibera 40</label>
    <type>Url</type>
</CustomField>