force-app/main/default/objects/Order/fields/Deliberation__c.field-meta.xml
<CustomField>
    <fullName>Deliberation__c</fullName>
    <label>Delibera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Delibera</fullName>
            </value>
            <value>
                <fullName>Fuori delibera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>