force-app/main/default/objects/Order/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>Indirizzo di recapito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>