force-app/main/default/objects/Order/fields/DiscardDocusignEnvelope__c.field-meta.xml
<CustomField>
    <fullName>DiscardDocusignEnvelope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DiscardDocusignEnvelope</label>
    <type>Checkbox</type>
</CustomField>