force-app/main/default/objects/Order/fields/DiscardReason__c.field-meta.xml
<CustomField>
    <fullName>DiscardReason__c</fullName>
    <label>Causale Ultimo Scarto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>