force-app/main/default/objects/Order/fields/DisconnectibilityPhone__c.field-meta.xml
<CustomField>
    <fullName>DisconnectibilityPhone__c</fullName>
    <label>Telefono Non Disalimentabilità</label>
    <type>Phone</type>
</CustomField>