force-app/main/default/objects/Order/fields/DistributorCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorCode__c</fullName>
    <label>Codice Distributore</label>
    <length>30</length>
    <type>Text</type>
</CustomField>