force-app/main/default/objects/Order/fields/DistributorFormula__c.field-meta.xml
<CustomField>
    <fullName>DistributorFormula__c</fullName>
    <description>Formula(Text)</description>
    <formula>ServicePoint__r.Distributor__r.Name</formula>
    <label>Distributore</label>
    <type>Text</type>
</CustomField>