force-app/main/default/objects/Order/fields/DistributorPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>DistributorPracticeCode__c</fullName>
    <label>Codice Pratica Distributore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>