force-app/main/default/objects/Order/fields/DocSendingMethod__c.field-meta.xml
<CustomField>
    <fullName>DocSendingMethod__c</fullName>
    <label>Modalita Invio Doc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Posta</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Stampa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>