force-app/main/default/objects/Order/fields/DocumentalPhase__c.field-meta.xml
<CustomField>
    <fullName>DocumentalPhase__c</fullName>
    <description>Indica la fase documentale del processo</description>
    <label>Fase Documentale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>