force-app/main/default/objects/Order/fields/DocumentalProcessType__c.field-meta.xml
<CustomField>
    <fullName>DocumentalProcessType__c</fullName>
    <formula>IF(ISPICKVAL(ProcessType__c,&apos;Subentro Gas&apos;),&apos;Subentro&apos;,
IF(ISPICKVAL(ProcessType__c,&apos; Subentro Ele&apos;),&apos;Subentro&apos;,TEXT(ProcessType__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo Processo Documentale</label>
    <type>Text</type>
</CustomField>