force-app/main/default/objects/Order/fields/DocumentalVat__c.field-meta.xml
<CustomField>
    <fullName>DocumentalVat__c</fullName>
    <label>Iva Documentale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_VATPercentage</valueSetName>
    </valueSet>
</CustomField>