force-app/main/default/objects/Order/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <label>Data Documento</label>
    <type>Date</type>
</CustomField>