force-app/main/default/objects/Order/fields/DocumentLow80__c.field-meta.xml
<CustomField>
    <fullName>DocumentLow80__c</fullName>
    <label>Documento Legge 80</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>