force-app/main/default/objects/Order/fields/DocumentPackage__c.field-meta.xml
<CustomField>
    <fullName>DocumentPackage__c</fullName>
    <label>Plico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>