force-app/main/default/objects/Order/fields/DocusignExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>DocusignExpirationDate__c</fullName>
    <description>Data Scadenza Busta Docusign</description>
    <label>Data Scadenza Busta Docusign</label>
    <type>Date</type>
</CustomField>