force-app/main/default/objects/Order/fields/DocusignURL__c.field-meta.xml
<CustomField>
    <fullName>DocusignURL__c</fullName>
    <description>Contiene il link generato da Docusign per l&apos;accesso all&apos;envelope</description>
    <label>URL Docusign</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>