force-app/main/default/objects/Order/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <label>Data decorrenza</label>
    <type>Date</type>
</CustomField>