force-app/main/default/objects/Order/fields/ElectronicInvoicingMethod__c.field-meta.xml
<CustomField>
    <fullName>ElectronicInvoicingMethod__c</fullName>
    <label>Modalità invio Fatturazione</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estero</fullName>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
            <value>
                <fullName>XML + carta/email</fullName>
            </value>
            <value>
                <fullName>XML PA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>