force-app/main/default/objects/Order/fields/EnergyService__c.field-meta.xml
<CustomField>
    <fullName>EnergyService__c</fullName>
    <label>Servizio Energetico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>