force-app/main/default/objects/Order/fields/EstimateAmount__c.field-meta.xml
<CustomField>
    <fullName>EstimateAmount__c</fullName>
    <label>Importo Preventivo</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>