force-app/main/default/objects/Order/fields/EstimatedVAT__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVAT__c</fullName>
    <label>Iva Preventivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>