force-app/main/default/objects/Order/fields/ExciseEle__c.field-meta.xml
<CustomField>
    <fullName>ExciseEle__c</fullName>
    <label>Accise Ele</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imposta usi domestici</fullName>
            </value>
            <value>
                <fullName>Imposta ordinaria Altri Usi (Cod. E_IE_M04)</fullName>
            </value>
            <value>
                <fullName>Imposta C En&gt;50% unità prod (Cod. E_IE_14A)</fullName>
            </value>
            <value>
                <fullName>Imposta Usi Chim Elettrol Metal No Sog. Obbl.  (Cod. E_IE_L11)</fullName>
            </value>
            <value>
                <fullName>Imposta Esente Forze Armate NATO (Cod. E_IE_L10)</fullName>
            </value>
            <value>
                <fullName>Imposta FFSS (Cod. E_IE_L03)</fullName>
            </value>
            <value>
                <fullName>Imposta Grossiti EE Non Domest (Cod. E_IE_L98)</fullName>
            </value>
            <value>
                <fullName>Imposta Illum Pubbl (Cod. E_IE_L01)</fullName>
            </value>
            <value>
                <fullName>No sottoposto 100% Off. Acquisto_Min.Chim.Metall. (Cod. E_IE_06C)</fullName>
            </value>
            <value>
                <fullName>Imposta Opifici (Cod. E_IE_L13)</fullName>
            </value>
            <value>
                <fullName>Imposta esente Prod.EE (Cod. E_IE_L06)</fullName>
            </value>
            <value>
                <fullName>Imposta Sedi Diplomatiche (Cod.E_IE_L02)</fullName>
            </value>
            <value>
                <fullName>Imposta Trasp Urb. (Cod. E_IE_L04)</fullName>
            </value>
            <value>
                <fullName>Imposta % Usi Chim Metall No Sog. Obbl.   (Cod. E_IE_11D)</fullName>
            </value>
            <value>
                <fullName>Imposta % Usi Mineral No Sog. Obbl.  (Cod. E_IE_11C)</fullName>
            </value>
            <value>
                <fullName>Imposta Usi Mineral No Sog. Obbl.  (Cod. E_IE_11A)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>