force-app/main/default/objects/Order/fields/ExciseGAS__c.field-meta.xml
<CustomField>
    <fullName>ExciseGAS__c</fullName>
    <label>Accise GAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imposta Autotrazione (Cod. G_I09)</fullName>
            </value>
            <value>
                <fullName>Imosta Autopr-Prod EE Industr (Cod. G_I15)</fullName>
            </value>
            <value>
                <fullName>Imposta Processi Metallurgici (Cod. G_I22)</fullName>
            </value>
            <value>
                <fullName>Imposta Processi Mineralogici (Cod. G_I23)</fullName>
            </value>
            <value>
                <fullName>Imposta Forze Armate Nazionali (Cod. G_I24)</fullName>
            </value>
            <value>
                <fullName>Imposta Usi Domestici (Cod. G_ICD)</fullName>
            </value>
            <value>
                <fullName>Imposta usi non domestici iva 10% (Cod. G_ICC10)</fullName>
            </value>
            <value>
                <fullName>Imposta usi non domestici iva 22% (Cod. G_ICC)</fullName>
            </value>
            <value>
                <fullName>Imposta usi industriali (Cod. G_I04)</fullName>
            </value>
            <value>
                <fullName>Altro</fullName>
            </value>
            <value>
                <fullName>Imposta Processi Elettrolitici (Cod. G_I21)</fullName>
            </value>
            <value>
                <fullName>Imposta Forze Armate NATO (Cod. G_I25)</fullName>
            </value>
            <value>
                <fullName>Imposta Sedi Diplomatiche - Art.22 (Cod. G_I26)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>