force-app/main/default/objects/Order/fields/ExciseRate__c.field-meta.xml
<CustomField>
    <fullName>ExciseRate__c</fullName>
    <label>Aliquota Accise</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>