force-app/main/default/objects/Order/fields/ExternalUserCompany__c.field-meta.xml
<CustomField>
    <fullName>ExternalUserCompany__c</fullName>
    <label>Società utente esterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>