force-app/main/default/objects/Order/fields/FacilitationExcise__c.field-meta.xml
<CustomField>
    <fullName>FacilitationExcise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accise Agevolata</label>
    <type>Checkbox</type>
</CustomField>