force-app/main/default/objects/Order/fields/FamilyNumber__c.field-meta.xml
<CustomField>
    <fullName>FamilyNumber__c</fullName>
    <label>Componenti Nucleo Famigliare</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Maggiore o uguale a 6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>