force-app/main/default/objects/Order/fields/FareCode__c.field-meta.xml
<CustomField>
    <fullName>FareCode__c</fullName>
    <label>Codice Tariffa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>