force-app/main/default/objects/Order/fields/FlagServizio26__c.field-meta.xml
<CustomField>
    <fullName>FlagServizio26__c</fullName>
    <label>FlagServizio26</label>
    <length>2</length>
    <type>Text</type>
</CustomField>