force-app/main/default/objects/Order/fields/FlyingRequest__c.field-meta.xml
<CustomField>
    <fullName>FlyingRequest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo che identifica se la pratica è una pratica in volo</description>
    <label>Pratica in volo</label>
    <type>Checkbox</type>
</CustomField>