force-app/main/default/objects/Order/fields/FriendCode__c.field-meta.xml
<CustomField>
    <fullName>FriendCode__c</fullName>
    <label>Codice Amico</label>
    <length>20</length>
    <type>Text</type>
</CustomField>