force-app/main/default/objects/Order/fields/GeneralContractConditions__c.field-meta.xml
<CustomField>
    <fullName>GeneralContractConditions__c</fullName>
    <label>Condizioni Generali Contratto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>