force-app/main/default/objects/Order/fields/GlobalMigrationKey__c.field-meta.xml
<CustomField>
    <fullName>GlobalMigrationKey__c</fullName>
    <externalId>true</externalId>
    <label>Chiave Globale Migrazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>