force-app/main/default/objects/Order/fields/HerAteco__c.field-meta.xml
<CustomField>
    <fullName>HerAteco__c</fullName>
    <label>Codice Istat/Ateco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>