force-app/main/default/objects/Order/fields/HerokuPracticeCode__c.field-meta.xml
<CustomField>
    <fullName>HerokuPracticeCode__c</fullName>
    <label>Codice Pratica Heroku</label>
    <length>30</length>
    <type>Text</type>
</CustomField>