force-app/main/default/objects/Order/fields/IbanCAB__c.field-meta.xml
<CustomField>
    <fullName>IbanCAB__c</fullName>
    <label>CAB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>