force-app/main/default/objects/Order/fields/IbanCIN__c.field-meta.xml
<CustomField>
    <fullName>IbanCIN__c</fullName>
    <label>CIN</label>
    <length>1</length>
    <type>Text</type>
</CustomField>