force-app/main/default/objects/Order/fields/IbanCountry__c.field-meta.xml
<CustomField>
    <fullName>IbanCountry__c</fullName>
    <label>Paese IBAN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>