force-app/main/default/objects/Order/fields/IbanIsForeign__c.field-meta.xml
<CustomField>
    <fullName>IbanIsForeign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IBAN Estero</label>
    <type>Checkbox</type>
</CustomField>