force-app/main/default/objects/Order/fields/ImplantType__c.field-meta.xml
<CustomField>
    <fullName>ImplantType__c</fullName>
    <label>Tipo impianto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_ImplantType</valueSetName>
    </valueSet>
</CustomField>