force-app/main/default/objects/Order/fields/ImplantTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>ImplantTypeFormula__c</fullName>
    <formula>TEXT(ServicePoint__r.ImplantType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impianto</label>
    <type>Text</type>
</CustomField>