force-app/main/default/objects/Order/fields/IncomingCreditCheckResult__c.field-meta.xml
<CustomField>
    <fullName>IncomingCreditCheckResult__c</fullName>
    <label>Esito Credit Check Entrante</label>
    <length>30</length>
    <type>Text</type>
</CustomField>