force-app/main/default/objects/Order/fields/IndustrialHousingUnit__c.field-meta.xml
<CustomField>
    <fullName>IndustrialHousingUnit__c</fullName>
    <label>Unità abitative uso industriale</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>