force-app/main/default/objects/Order/fields/Instance326__c.field-meta.xml
<CustomField>
    <fullName>Instance326__c</fullName>
    <label>Istanza 326</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_DocuementValidation</valueSetName>
    </valueSet>
</CustomField>