force-app/main/default/objects/Order/fields/InvoiceCertifiedEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoiceCertifiedEmailAddress__c</fullName>
    <label>PEC Fatturazione Elettronica</label>
    <type>Email</type>
</CustomField>