force-app/main/default/objects/Order/fields/InvoiceEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>InvoiceEmailAddress__c</fullName>
    <label>Email Invio Bolletta</label>
    <type>Email</type>
</CustomField>