force-app/main/default/objects/Order/fields/IsActivationDeferred__c.field-meta.xml
<CustomField>
    <fullName>IsActivationDeferred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attivazione Posticipata</label>
    <type>Checkbox</type>
</CustomField>