force-app/main/default/objects/Order/fields/IsChangeSalesCompany__c.field-meta.xml
<CustomField>
    <fullName>IsChangeSalesCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cambio Societa di Vendita</label>
    <type>Checkbox</type>
</CustomField>