force-app/main/default/objects/Order/fields/IsCloned__c.field-meta.xml
<CustomField>
    <fullName>IsCloned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clonato</label>
    <type>Checkbox</type>
</CustomField>