force-app/main/default/objects/Order/fields/IsEarlyActivation__c.field-meta.xml
<CustomField>
    <fullName>IsEarlyActivation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attivazione Anticipata</label>
    <type>Checkbox</type>
</CustomField>