force-app/main/default/objects/Order/fields/IsExportDatiCatastali__c.field-meta.xml
<CustomField>
    <fullName>IsExportDatiCatastali__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsExportDatiCatastali</label>
    <type>Checkbox</type>
</CustomField>