force-app/main/default/objects/Order/fields/IsMassive__c.field-meta.xml
<CustomField>
    <fullName>IsMassive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Massivo</label>
    <type>Checkbox</type>
</CustomField>