force-app/main/default/objects/Order/fields/IsMuc__c.field-meta.xml
<CustomField>
    <fullName>IsMuc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Muc</label>
    <type>Checkbox</type>
</CustomField>