force-app/main/default/objects/Order/fields/isMultipleQuoteOffer__c.field-meta.xml
<CustomField>
    <fullName>isMultipleQuoteOffer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offerta Multipla Quote</label>
    <type>Checkbox</type>
</CustomField>