force-app/main/default/objects/Order/fields/IsMyAgency__c.field-meta.xml
<CustomField>
    <fullName>IsMyAgency__c</fullName>
    <formula>IF(
	AND(
		Owner:User.Profile.Name = &apos;Hera Teleseller Partner User&apos;,
		SUBSTITUTE($UserRole.DeveloperName, &apos;DirigentePartner&apos;, &apos;&apos;) = Owner:User.Contact.Account.Name,
		NOT(ISNULL(Owner:User.ContactId))
	),
	true,
	false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMyAgency</label>
    <type>Checkbox</type>
</CustomField>