force-app/main/default/objects/Order/fields/isPreDocumentationToSend__c.field-meta.xml
<CustomField>
    <fullName>isPreDocumentationToSend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentazione Anticipata da inviare</label>
    <type>Checkbox</type>
</CustomField>