force-app/main/default/objects/Order/fields/IsSequanzialized__c.field-meta.xml
<CustomField>
    <fullName>IsSequanzialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Sequenzializzazione</label>
    <type>Checkbox</type>
</CustomField>