force-app/main/default/objects/Order/fields/isSTG__c.field-meta.xml
<CustomField>
    <fullName>isSTG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSTG</label>
    <type>Checkbox</type>
</CustomField>