force-app/main/default/objects/Order/fields/isSwitchReseller__c.field-meta.xml
<CustomField>
    <fullName>isSwitchReseller__c</fullName>
    <formula>( ISPICKVAL(ProcessType__c, &quot;Switch in Reseller&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Switch In Reseller</label>
    <type>Checkbox</type>
</CustomField>