force-app/main/default/objects/Order/fields/IsTechnicalTransfer__c.field-meta.xml
<CustomField>
    <fullName>IsTechnicalTransfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo per identificare se si tratta di un Switch In Con Voltura Tecnica</description>
    <label>Voltura Tecnica</label>
    <type>Checkbox</type>
</CustomField>