force-app/main/default/objects/Order/fields/isTransition__c.field-meta.xml
<CustomField>
    <fullName>isTransition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transitorio</label>
    <type>Checkbox</type>
</CustomField>