force-app/main/default/objects/Order/fields/IsWinback__c.field-meta.xml
<CustomField>
    <fullName>IsWinback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag WinBack</label>
    <type>Checkbox</type>
</CustomField>