force-app/main/default/objects/Order/fields/LandRegistry__c.field-meta.xml
<CustomField>
    <fullName>LandRegistry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dati catastali</label>
    <referenceTo>LandRegistry__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>