force-app/main/default/objects/Order/fields/LoginChannel__c.field-meta.xml
<CustomField>
    <fullName>LoginChannel__c</fullName>
    <label>Canale di Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>