force-app/main/default/objects/Order/fields/LoginGroup__c.field-meta.xml
<CustomField>
    <fullName>LoginGroup__c</fullName>
    <label>Gruppo Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>