force-app/main/default/objects/Order/fields/LoginWorkstation__c.field-meta.xml
<CustomField>
    <fullName>LoginWorkstation__c</fullName>
    <label>Postazione di Login</label>
    <length>255</length>
    <type>Text</type>
</CustomField>