force-app/main/default/objects/Order/fields/LowerChannelAgency__c.field-meta.xml
<CustomField>
    <fullName>LowerChannelAgency__c</fullName>
    <label>Canale Inferiore Agenzia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>