force-app/main/default/objects/Order/fields/ManagedSapDiscard__c.field-meta.xml
<CustomField>
    <fullName>ManagedSapDiscard__c</fullName>
    <label>Scarto Sap Gestito</label>
    <length>3</length>
    <type>Text</type>
</CustomField>