force-app/main/default/objects/Order/fields/MandatoryAttachments__c.field-meta.xml
<CustomField>
    <fullName>MandatoryAttachments__c</fullName>
    <label>Allegati Obbligatori</label>
    <length>255</length>
    <type>Text</type>
</CustomField>