force-app/main/default/objects/Order/fields/MarketingPrivacy__c.field-meta.xml
<CustomField>
    <fullName>MarketingPrivacy__c</fullName>
    <label>Consenso Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>