force-app/main/default/objects/Order/fields/MarketOrigin__c.field-meta.xml
<CustomField>
    <fullName>MarketOrigin__c</fullName>
    <label>Mercato Provenienza</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Market</valueSetName>
    </valueSet>
</CustomField>