force-app/main/default/objects/Order/fields/MaterialDescription__c.field-meta.xml
<CustomField>
    <fullName>MaterialDescription__c</fullName>
    <label>Descrizione Materiale da Inviare</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>