force-app/main/default/objects/Order/fields/MaxAfterthoughtDate__c.field-meta.xml
<CustomField>
    <fullName>MaxAfterthoughtDate__c</fullName>
    <label>Data Massima Ripensamento</label>
    <type>Date</type>
</CustomField>