force-app/main/default/objects/Order/fields/MeterClass__c.field-meta.xml
<CustomField>
    <fullName>MeterClass__c</fullName>
    <description>Classe o Calibro Contatore</description>
    <label>Classe Contatore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Cluster</valueSetName>
    </valueSet>
</CustomField>