force-app/main/default/objects/Order/fields/MeterSN__c.field-meta.xml
<CustomField>
    <fullName>MeterSN__c</fullName>
    <label>Matricola Contatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>