force-app/main/default/objects/Order/fields/MethodSignedAccepted__c.field-meta.xml
<CustomField>
    <fullName>MethodSignedAccepted__c</fullName>
    <label>Conferma contratto cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IWR</fullName>
            </value>
            <value>
                <fullName>Comfort call</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>