force-app/main/default/objects/Order/fields/MissingDueAmount__c.field-meta.xml
<CustomField>
    <fullName>MissingDueAmount__c</fullName>
    <label>Importo mancato dovuto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>